...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapHomePage"
    android:id="@+id/map_home_page"
    >

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
...
            app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="@+id/background"
            app:layout_constraintVertical_bias="0.844" />

        <View
            android:id="@+id/village"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintHorizontal_bias="0.75"
...
