<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ReservationFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="220dp"
            android:background="@android:color/transparent"
            android:src="@drawable/selected_home" />

        <ImageButton
            android:id="@+id/about"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/about" />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/profile" />

    </LinearLayout>

    <Button
        android:id="@+id/pastResButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Past Reservations"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toEndOf="@+id/comingResButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <Button
        android:id="@+id/comingResButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upcoming Reservations"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toStartOf="@+id/pastResButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar"
        app:layout_constraintVertical_bias="0.198" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="409dp"
        android:layout_height="450dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/resDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"></LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/idto1r"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/idto2r"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>